--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -37,7 +37,7 @@ on fs
     wait /dev/block/platform/soc.0/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc.0/${ro.boot.bootdevice} /dev/block/bootdevice
     wait /dev/block/bootdevice
-    mount_all fstab.qcom
+    mount_all /system/vendor/etc/fstab.qcom
     write /proc/sys/vm/swappiness 100
 
     mkdir /persist/data 0700  system system
